[package]
name = "proj_billing"
version = "0.1.0"
authors = ["Tom Eccles <tde1g14@soton.ac.uk>"]
description = "Some smart meter billing protocols built on top of proj_net"
documentation = "https://tblah.github.io/project-billing"
licence = "GPL-3"
readme = "README.md"
repository = "https://github.com/tblah/project-billing"

[dependencies]
proj_net = { git = "https://github.com/tblah/project-net" }
sodiumoxide = "0.0.12"
