[package]
name = "proj_billing"
version = "0.1.0"
authors = ["Tom Eccles <tde1g14@soton.ac.uk>"]
description = "Some smart meter billing protocols built on top of proj_net"
documentation = "https://tblah.github.io/project-billing"
licence = "GPL-3"
readme = "README.md"
repository = "https://github.com/tblah/project-billing"

[dependencies]
proj_net = { git = "https://github.com/tblah/project-net" }
proj_crypto = { git = "https://github.com/tblah/project-crypto" }
sodiumoxide = "0.0.12"
rust-gmp = {git = "https://github.com/fizyk20/rust-gmp", rev = "f3e0a8962206ecf7d21ac7d0a9635c7eff5ce7ff"}
getopts = "0.2"
num = "0.1.37"

[[bin]]
name = "interactive-demo"
doc = true
path = "src/main.rs"
